--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./img/the-last-of-us-parte-i-202261012304123_1.jpg" class="d-block w-100" alt="...">
+                        <img src="./img/" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
                         <img src="./img/bleachremix011-db5742e66babce6afa16730621958737-640-0.webp" class="d-block w-100" alt="...">
