--- a/index.html
+++ b/index.html
@@ -82,15 +82,38 @@
             </nav>
 
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./img/14caa8274fc227ae72a0ba394462db2f811e61e6.webp" class="d-block w-100" alt="...">
+                        <img src="./img/14caa8274fc227ae72a0ba394462db2f811e61e6.webp" class="d-block w-100" alt="portada videojuegos ofertas">
+                        <div class="carousel-caption d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Some representative placeholder content for the first slide.</p>
+                        </div>
                     </div>
+
                     <div class="carousel-item">
-                        <img src="./img/da18ugq-f031344b-1c87-4586-a4c7-5d71c308a435.jpg" class="d-block w-100" alt="...">
+                        <img src="./img/Dc-Comics.jpg" class="d-block w-100" alt="portada comics ofertas">
+                        <div class="carousel-caption d-md-block">
+                            <h5>Ofertas en Comics</h5>
+                            <p></p>
+                        </div>
                     </div>
+
                     <div class="carousel-item">
-                        <img src="./img/portada-manga-rock.jpg" class="d-block w-100" alt="...">
+                        <img src="./img/portada-manga-rock.jpg" class="d-block w-100" alt="portada manga ofertas">
+                        <div class="carousel-caption d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the first slide.</p>
+                        </div>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
