--- a/paginas/comics.html
+++ b/paginas/comics.html
@@ -24,7 +24,7 @@
                     <a href="../paginas/comics.html">COMICS</a>
                 </li>
                 <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                    <a href="../paginas/manga.html">MANGA</a>
+                    <a href="../paginas/manga.html">MANGAS</a>
                 </li>
                 <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="../paginas/videojuegos.html">VIDEOJUEGOS</a>
@@ -56,7 +56,7 @@
                             <a class="text-white" href="../paginas/comics.html">COMICS</a>
                         </li>
                         <li class="xeroxLista1">
-                            <a class="text-white" href="../paginas/manga.html">MANGA</a>
+                            <a class="text-white" href="../paginas/manga.html">MANGAS</a>
                         </li>
                         <li class="xeroxLista1">
                             <a class="text-white" href="../paginas/videojuegos.html">VIDEOJUEGOS</a>
@@ -83,7 +83,7 @@
             </nav>
 
             <section class="banner">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt animi nisi modi voluptate, porro accusantium dolorem, accusamus excepturi ipsa ea, ipsam similique quidem consequuntur praesentium magnam eaque earum architecto vel.</p>
+                <p>COMICS</p>
             </section>
 
             <h2>Comics</h2>
