--- a/paginas/juegosdecartas.html
+++ b/paginas/juegosdecartas.html
@@ -24,7 +24,7 @@
                     <a href="../paginas/comics.html">COMICS</a>
                 </li>
                 <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                    <a href="../paginas/manga.html">MANGA</a>
+                    <a href="../paginas/manga.html">MANGAS</a>
                 </li>
                 <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="../paginas/videojuegos.html">VIDEOJUEGOS</a>
@@ -56,7 +56,7 @@
                             <a class="text-white" href="../paginas/comics.html">COMICS</a>
                         </li>
                         <li class="xeroxLista1">
-                            <a class="text-white" href="../paginas/manga.html">MANGA</a>
+                            <a class="text-white" href="../paginas/manga.html">MANGAS</a>
                         </li>
                         <li class="xeroxLista1">
                             <a class="text-white" href="../paginas/videojuegos.html">VIDEOJUEGOS</a>
@@ -82,6 +82,10 @@
                     <li class="breadcrumb-item active" aria-current="page">Cartas</li>
                 </ol>
             </nav>
+
+            <section class="banner3">
+                <p>JUEGOS DE CARTAS</p>
+            </section>
 
             <h2>Juegos de Cartas</h2>
             <ul class="row">
