--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -24,7 +24,7 @@
                     <a href="../paginas/comics.html">COMICS</a>
                 </li>
                 <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                    <a href="../paginas/manga.html">MANGA</a>
+                    <a href="../paginas/manga.html">MANGAS</a>
                 </li>
                 <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="../paginas/videojuegos.html">VIDEOJUEGOS</a>
@@ -56,7 +56,7 @@
                             <a class="text-white" href="../paginas/comics.html">COMICS</a>
                         </li>
                         <li class="xeroxLista1">
-                            <a class="text-white" href="../paginas/manga.html">MANGA</a>
+                            <a class="text-white" href="../paginas/manga.html">MANGAS</a>
                         </li>
                         <li class="xeroxLista1">
                             <a class="text-white" href="../paginas/videojuegos.html">VIDEOJUEGOS</a>
@@ -75,13 +75,16 @@
 
     <main class="overflow-hidden">
         <section>
-
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Inicio</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Videojuegos</li>
                 </ol>
             </nav>
+
+            <section class="banner2">
+                <p>VIDEOJUEGOS</p>
+            </section>
 
             <h2>Videojuegos</h2>
             <ul class="row">
